@@ -3,7 +3,6 @@ package com.dermacare.bookingService.service.Impl;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -20,12 +19,8 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class WhatsAppService {
 
-    private final WebClient webClient = WebClient.builder()
-            .baseUrl("https://www.fast2sms.com")
-            .build();
-
-    @Autowired
-    private AdminServiceClient adminServiceClient;
+    private final WebClient webClient;
+    private final AdminServiceClient adminServiceClient;
 
     @Value("${whatsapp.auth-key}")
     private String authKey;
@@ -33,11 +28,21 @@ public class WhatsAppService {
     @Value("${whatsapp.phone-number-id}")
     private String phoneNumberId;
 
-    @Value("${whatsapp.message-id}")
-    private String messageId;
+    @Value("${whatsapp.booking-confirmation-template-id}")
+    private String bookingConfirmationTemplateId;
 
-    private static final String BOOKING_TEMPLATE =
-            "appointment_confirmation";
+    public WhatsAppService(
+            WebClient.Builder webClientBuilder,
+            AdminServiceClient adminServiceClient,
+            @Value("${whatsapp.base-url}") String baseUrl
+    ) {
+        this.adminServiceClient = adminServiceClient;
+        this.webClient = webClientBuilder
+                .baseUrl(baseUrl)
+                .build();
+    }
+
+    private static final String BOOKING_TEMPLATE = "appointment_confirmation";
 
     public void sendBookingConfirmation(BookingRequset booking) {
 
@@ -54,64 +59,36 @@ public class WhatsAppService {
             }
 
             if (mobile == null || mobile.trim().isEmpty()) {
-
-                log.warn(
-                        "Mobile number not found for booking {}",
-                        booking.getBookingId());
-
+                log.warn("Mobile number not found for booking {}", booking.getBookingId());
                 return;
             }
 
-            String normalizedMobile =
-                    mobile.replaceAll("[^0-9]", "");
+            String normalizedMobile = mobile.replaceAll("[^0-9]", "");
 
-            if (normalizedMobile.startsWith("91")
-                    && normalizedMobile.length() == 12) {
-
-                normalizedMobile =
-                        normalizedMobile.substring(2);
+            if (normalizedMobile.startsWith("91") && normalizedMobile.length() == 12) {
+                normalizedMobile = normalizedMobile.substring(2);
             }
 
             final String cleanMobile = normalizedMobile;
 
             // =====================================================
-            // FETCH BRANCH DETAILS FROM ADMIN SERVICE
+            // FETCH BRANCH DETAILS
             // =====================================================
 
             BranchDTO branch = null;
 
             try {
-
-                log.info(
-                        "Fetching branch details for branchId={}",
-                        booking.getBranchId());
-
                 ResponseEntity<ResponseStructure<BranchDTO>> response =
-                        adminServiceClient.getBranchById(
-                                booking.getBranchId());
+                        adminServiceClient.getBranchById(booking.getBranchId());
 
                 if (response != null
                         && response.getBody() != null
                         && response.getBody().getData() != null) {
-
                     branch = response.getBody().getData();
-
-                    log.info("Branch Details : {}", branch);
-
-                } else {
-
-                    log.warn(
-                            "Branch details not found for branchId={}",
-                            booking.getBranchId());
                 }
 
             } catch (Exception e) {
-
-                log.error(
-                        "Unable to fetch branch details for branchId {} : {}",
-                        booking.getBranchId(),
-                        e.getMessage(),
-                        e);
+                log.error("Branch fetch failed: {}", e.getMessage(), e);
             }
 
             // =====================================================
@@ -126,46 +103,22 @@ public class WhatsAppService {
 
             if (branch != null) {
 
-                clinicName = nullSafe(
-                        branch.getHospitalName(),
-                        "Clinic");
-
-                branchName = nullSafe(
-                        branch.getBranchName(),
-                        "");
-
-                whatsappNumber = nullSafe(
-                        branch.getContactNumber(),
-                        "");
-
-                email = nullSafe(
-                        branch.getEmail(),
-                        "");
+                clinicName = nullSafe(branch.getHospitalName(), "Clinic");
+                branchName = nullSafe(branch.getBranchName(), "");
+                whatsappNumber = nullSafe(branch.getContactNumber(), "");
+                email = nullSafe(branch.getEmail(), "");
 
                 if (branch.getLatitude() != null
-                        && !branch.getLatitude().trim().isEmpty()
+                        && !branch.getLatitude().isBlank()
                         && branch.getLongitude() != null
-                        && !branch.getLongitude().trim().isEmpty()) {
+                        && !branch.getLongitude().isBlank()) {
 
-                	locationUrl =
-                		    "https://www.google.com/maps/search/?api=1&query="
-                		    + URLEncoder.encode(branch.getHospitalName()
-                		    + " " + branch.getAddress(),
-                		    StandardCharsets.UTF_8);
-                	
-//                	locationUrl =
-//                		    "https://www.google.com/maps/search/?api=1&query="
-//                		    + branch.getLatitude()
-//                		    + ","
-//                		    + branch.getLongitude();
+                    locationUrl =
+                            "https://www.google.com/maps/search/?api=1&query="
+                                    + branch.getLatitude()
+                                    + ","
+                                    + branch.getLongitude();
                 }
-
-                log.info(
-                        "Hospital={}, Branch={}, WhatsApp={}, Email={}",
-                        clinicName,
-                        branchName,
-                        whatsappNumber,
-                        email);
             }
 
             // =====================================================
@@ -173,38 +126,38 @@ public class WhatsAppService {
             // =====================================================
 
             final String variables = String.join("|",
-
-                    clinicName,                                  // {{1}}
-                    nullSafe(booking.getName(), "Patient"),      // {{2}}
-                    nullSafe(booking.getDoctorName(), "Doctor"), // {{3}}
-                    nullSafe(booking.getServiceDate(), ""),      // {{4}}
-                    nullSafe(booking.getServicetime(), ""),      // {{5}}
-                    nullSafe(booking.getBookingId(), ""),        // {{6}}
-                    branchName,                                  // {{7}}
-                    whatsappNumber,                              // {{8}}
-                    email,                                       // {{9}}
-                    locationUrl                                  // {{10}}
+                    clinicName,
+                    nullSafe(booking.getName(), "Patient"),
+                    nullSafe(booking.getDoctorName(), "Doctor"),
+                    nullSafe(booking.getServiceDate(), ""),
+                    nullSafe(booking.getServicetime(), ""),
+                    nullSafe(booking.getBookingId(), ""),
+                    branchName,
+                    whatsappNumber,
+                    email,
+                    locationUrl
             );
 
-            log.info(
-                    "Sending WhatsApp | Template={} | BookingId={} | Mobile={}",
+            // =====================================================
+            // LOGGING
+            // =====================================================
+
+            log.info("Sending WhatsApp | Template={} | BookingId={} | Mobile={}",
                     BOOKING_TEMPLATE,
                     booking.getBookingId(),
                     cleanMobile);
 
-            log.info(
-                    "WhatsApp Variables={}",
-                    variables);
+            log.info("WhatsApp Variables={}", variables);
 
             // =====================================================
-            // FAST2SMS API
+            // API CALL
             // =====================================================
 
             String response = webClient.get()
                     .uri(uriBuilder -> uriBuilder
                             .path("/dev/whatsapp")
                             .queryParam("authorization", authKey)
-                            .queryParam("message_id", messageId)
+                            .queryParam("message_id", bookingConfirmationTemplateId)
                             .queryParam("phone_number_id", phoneNumberId)
                             .queryParam("numbers", cleanMobile)
                             .queryParam("variables_values", variables)
@@ -213,29 +166,20 @@ public class WhatsAppService {
                     .bodyToMono(String.class)
                     .block();
 
-            log.info(
-                    "WhatsApp booking confirmation sent successfully : {}",
-                    response);
+            log.info("WhatsApp sent successfully: {}", response);
 
         } catch (Exception e) {
-
-            log.error(
-                    "WhatsApp booking confirmation failed : {}",
-                    e.getMessage(),
-                    e);
-
-            throw new RuntimeException(
-                    "WhatsApp booking confirmation failed : "
-                            + e.getMessage());
+            log.error("WhatsApp booking failed: {}", e.getMessage(), e);
+            throw new RuntimeException("WhatsApp booking failed", e);
         }
     }
 
-    private String nullSafe(
-            String value,
-            String defaultValue) {
+    // =====================================================
+    // SAFE METHOD
+    // =====================================================
 
-        return (value != null
-                && !value.trim().isEmpty())
+    private String nullSafe(String value, String defaultValue) {
+        return (value != null && !value.trim().isEmpty())
                 ? value.trim()
                 : defaultValue;
     }
